add codecov to CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,6 +46,11 @@ upload documentation to docs repo:
   - git commit --allow-empty -m "deploy docs for ${CI_COMMIT_TAG:-$CI_COMMIT_SHA}"
   - git push --force docs_deploy_origin ${CI_COMMIT_REF_NAME}
 
+trigger codecov.io analysis:
+  stage: deploy
+  script:
+    - codecov
+
 trigger website rebuild:
   stage: finalize
   only:
