--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,27 +1,26 @@
 image: quantumsim/testing
 
 stages:
-  - build
-  - test
-  - deploy
-  - finalize
+- build
+- test
+- deploy
+- finalize
 
 build HTML documentation:
   stage: build
   script:
-    - python3 setup.py install
-    - make -C doc html
+  - python3 setup.py install
+  - make -C doc html
   artifacts:
     paths:
-      - doc/build/html
+    - doc/build/html
     expire_in: 1 hour
 
 run tests:
   stage: test
   script:
-    - python3 setup.py install
-    - py.test
-
+  - python3 setup.py install
+  - py.test --cov=quantumsim --cov-report=xml
 check for broken links in doc:
   stage: test
   script:
@@ -32,23 +31,33 @@ upload documentation to docs repo:
   stage: deploy
   only:
     - master@quantumsim/quantumsim
+  before_script:
+  # kaniko issue https://github.com/GoogleContainerTools/kaniko/issues/457
+  - mkdir -p /etc/ssh
+  - ssh-keyscan -t rsa gitlab.com >> /etc/ssh/ssh_known_hosts
   script:
-    - mkdir -p ~/.ssh && touch ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
-    - echo "${QUANTUMSIM_DOC_DEPLOY_KEY}" | base64 -d > ~/.ssh/id_rsa
-    - cd doc/build/html
-    - git init
-    - git config --local user.name "Quantumsim CI Worker"
-    - git config --local user.email "quantumsim@nomail"
-    - git remote add docs_deploy_origin "${QUANTUMSIM_DOC_GIT_URL}"
-    - git add .
-    - git commit --allow-empty -m "deploy docs for ${CI_COMMIT_TAG:-$CI_COMMIT_SHA}"
-    - git push --force docs_deploy_origin master
+  - mkdir -p ~/.ssh && touch ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
+  - echo "${QUANTUMSIM_DOC_DEPLOY_KEY}" | base64 -d > ~/.ssh/id_rsa
+  - cd doc/build/html
+  - git init
+  - git config --local user.name "Quantumsim CI Worker"
+  - git config --local user.email "quantumsim@nomail"
+  - git remote add docs_deploy_origin "${QUANTUMSIM_DOC_GIT_URL}"
+  - git add .
+  - git commit --allow-empty -m "deploy docs for ${CI_COMMIT_TAG:-$CI_COMMIT_SHA}"
+  - git push --force docs_deploy_origin master
+
+
+trigger codecov.io analysis:
+  stage: deploy
+  script:
+  - codecov
 
 trigger website rebuild:
   stage: finalize
   only:
-    - master@quantumsim/quantumsim
+  - master@quantumsim/quantumsim
   script:
-    - curl --request POST --form token=${QUANTUMSIM_WEBSITE_TRIGGER_TOKEN}
-           --form ref=master
-           ${QUANTUMSIM_GITLAB_URL}/api/v4/projects/${QUANTUMSIM_WEBSITE_PROJECTID}/trigger/pipeline
+  - curl --request POST --form token=${QUANTUMSIM_WEBSITE_TRIGGER_TOKEN}
+         --form ref=master
+         ${QUANTUMSIM_GITLAB_URL}/api/v4/projects/${QUANTUMSIM_WEBSITE_PROJECTID}/trigger/pipeline
