--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,10 @@ run tests:
   script:
   - python3 setup.py install
   - py.test --cov=quantumsim --cov-report=xml
+  artifacts:
+    paths:
+    - coverage.xml
+
 check for broken links in doc:
   stage: test
   script:
