clarify the autodeploy rule
For security reasons it is better to restrict deploy only for vX.X.X
tags. These tags is protected in Gitlab, only maintainers can push them.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,10 +60,14 @@ upload documentation to docs repo:
   - git commit --allow-empty -m "deploy docs for ${CI_COMMIT_TAG:-$CI_COMMIT_SHA}"
   - git push --force docs_deploy_origin master
 
+# We will upload a new release to PyPI in the case:
+# - tag vX.X.X is pushed
 upload new release to PyPI:
   stage: deploy
   only:
-    - tags
+    - /\Av\d+\.\d+\.\d+\z/
+  except:
+    - branches
   script:
     - twine upload dist/*
 
