--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,82 +1,10 @@
 image: registry.gitlab.com/quantumsim/testing
 
 stages:
-- build
-- test
-- deploy
 - finalize
-
-build html documentation:
-  stage: build
-  script:
-  - python3 setup.py install
-  - cd doc && make html
-  artifacts:
-    paths:
-    - doc/build/html
-    expire_in: 1 hour
-
-build distribution packages:
-  stage: build
-  script:
-  - python3 setup.py check --strict
-  - python3 setup.py sdist bdist_wheel
-  artifacts:
-    paths:
-    - dist
-
-run tests:
-  stage: test
-  script:
-  - pip install dist/quantumsim-*-py3-none-any.whl
-  - py.test --cov=quantumsim --cov-report=xml
-  artifacts:
-    paths:
-    - coverage.xml
-
-check for broken links in doc:
-  stage: test
-  script:
-  - cd doc && make linkcheck
-  allow_failure: true
-
-upload documentation to docs repo:
-  stage: deploy
-  only:
-  - master@quantumsim/quantumsim
-  - /\Av\d+\.\d+\.\d+\z/
-  before_script:
-  - mkdir -p /etc/ssh
-  - ssh-keyscan -t rsa gitlab.com >> /etc/ssh/ssh_known_hosts
-  script:
-  - mkdir -p ~/.ssh && touch ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
-  - echo "${QUANTUMSIM_DOC_DEPLOY_KEY}" | base64 -d > ~/.ssh/id_rsa
-  - cd doc/build/html
-  - git init
-  - git config --local user.name "quantumsim ci worker"
-  - git config --local user.email "quantumsim@nomail"
-  - git remote add docs_deploy_origin "${QUANTUMSIM_DOC_GIT_URL}"
-  - git checkout -b ${CI_COMMIT_REF_NAME}
-  - git add .
-  - git commit --allow-empty -m "deploy docs for ${CI_COMMIT_TAG:-$CI_COMMIT_SHA}"
-  - git push --force docs_deploy_origin ${CI_COMMIT_REF_NAME}
-
-# We will upload a new release to PyPI if tag vX.X.X is pushed
-upload new release to PyPI:
-  stage: deploy
-  only:
-  - /\Av\d+\.\d+\.\d+\z/
-  except:
-  - branches
-  script:
-  - twine upload dist/*
 
 trigger website rebuild:
   stage: finalize
-  only:
-  - master@quantumsim/quantumsim
-  - /\Av\d+\.\d+\.\d+\z/
   script:
-  - curl --request post --form token=${QUANTUMSIM_WEBSITE_TRIGGER_TOKEN}
-    --form ref=master
-    ${QUANTUMSIM_GITLAB_URL}/api/v4/projects/${QUANTUMSIM_WEBSITE_PROJECTID}/trigger/pipeline
+  - curl -X POST -F "token=${QUANTUMSIM_WEBSITE_TRIGGER_TOKEN}" -F ref=master
+    https://gitlab.com/api/v4/projects/7827986/trigger/pipeline
