--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,11 +6,11 @@ stages:
 - deploy
 - finalize
 
-build HTML documentation:
+build html documentation:
   stage: build
   script:
   - python3 setup.py install
-  - make -C doc html
+  - cd doc && make html
   artifacts:
     paths:
     - doc/build/html
@@ -19,17 +19,17 @@ build HTML documentation:
 build distribution packages:
   stage: build
   script:
-    - python3 setup.py check --strict
-    - python3 setup.py sdist bdist_wheel
+  - python3 setup.py check --strict
+  - python3 setup.py sdist bdist_wheel
   artifacts:
     paths:
-      - dist
+    - dist
 
 run tests:
   stage: test
   script:
   - pip install dist/quantumsim-*-py3-none-any.whl
-  - pytest --cov=quantumsim --cov-report=xml
+  - py.test --cov=quantumsim --cov-report=xml
   artifacts:
     paths:
     - coverage.xml
@@ -37,15 +37,16 @@ run tests:
 check for broken links in doc:
   stage: test
   script:
-    - make -C doc linkcheck
+  - cd doc && make linkcheck
   allow_failure: true
 
 upload documentation to docs repo:
   stage: deploy
   only:
-    - master@quantumsim/quantumsim
+  - master@quantumsim/quantumsim
+  - stable/v0.2@quantumsim/quantumsim
+  - /\Av\d+\.\d+\.\d+\z/
   before_script:
-  # kaniko issue https://github.com/GoogleContainerTools/kaniko/issues/457
   - mkdir -p /etc/ssh
   - ssh-keyscan -t rsa gitlab.com >> /etc/ssh/ssh_known_hosts
   script:
@@ -53,29 +54,29 @@ upload documentation to docs repo:
   - echo "${QUANTUMSIM_DOC_DEPLOY_KEY}" | base64 -d > ~/.ssh/id_rsa
   - cd doc/build/html
   - git init
-  - git config --local user.name "Quantumsim CI Worker"
+  - git config --local user.name "quantumsim ci worker"
   - git config --local user.email "quantumsim@nomail"
   - git remote add docs_deploy_origin "${QUANTUMSIM_DOC_GIT_URL}"
+  - git checkout -b ${CI_COMMIT_REF_NAME}
   - git add .
   - git commit --allow-empty -m "deploy docs for ${CI_COMMIT_TAG:-$CI_COMMIT_SHA}"
-  - git push --force docs_deploy_origin master
+  - git push --force docs_deploy_origin ${CI_COMMIT_REF_NAME}
 
-# We will upload a new release to PyPI in the case:
-# - tag vX.X.X is pushed
+# We will upload a new release to PyPI if tag vX.X.X is pushed
 upload new release to PyPI:
   stage: deploy
   only:
-    - /\Av\d+\.\d+\.\d+\z/
+  - /\Av\d+\.\d+\.\d+\z/
   except:
-    - branches
+  - branches
   script:
-    - twine upload dist/*
+  - twine upload dist/*
 
 trigger website rebuild:
   stage: finalize
   only:
   - master@quantumsim/quantumsim
+  - /\Av\d+\.\d+\.\d+\z/
   script:
-  - curl --request POST --form token=${QUANTUMSIM_WEBSITE_TRIGGER_TOKEN}
-         --form ref=master
-         ${QUANTUMSIM_GITLAB_URL}/api/v4/projects/${QUANTUMSIM_WEBSITE_PROJECTID}/trigger/pipeline
+  - curl -X POST -F "token=${QUANTUMSIM_WEBSITE_TRIGGER_TOKEN}" -F ref=master
+    ${QUANTUMSIM_GITLAB_URL}/api/v4/projects/${QUANTUMSIM_WEBSITE_PROJECTID}/trigger/pipeline
