--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,4 @@
 filterwarnings =
     error
     ignore:Could not import CUDA*:UserWarning
+    ignore:quantumsim.models module in current state*:UserWarning
