--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,5 @@ filterwarnings =
     error
     ignore:Could not import CUDA*:UserWarning
     ignore:quantumsim.models module in current state*:UserWarning
+    ignore:Not importing directory*:ImportWarning
+
