ignore the DeprecationWarning about imp module

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,4 +4,5 @@ filterwarnings =
     ignore:Could not import CUDA*:UserWarning
     ignore:quantumsim.models module in current state*:UserWarning
     ignore:Not importing directory*:ImportWarning
+    ignore:the imp module is deprecated *:DeprecationWarning:setuptools.*:
 
