--- a/pytest.ini
+++ b/pytest.ini
@@ -4,5 +4,6 @@ filterwarnings =
     ignore:Could not import CUDA*:UserWarning
     ignore:quantumsim.models module in current state*:UserWarning
     ignore:Not importing directory*:ImportWarning
-    ignore:the imp module is deprecated *:DeprecationWarning:setuptools.*:
+    ignore:the imp module is deprecated *:DeprecationWarning
+    ignore:numpy.ufunc size changed*:RuntimeWarning
 
