partially mitigate setuptools-related problems
Since setuptools-49.2.0 the warning is issued if it finds distutils
already imported. This warning is set to being ignored, since it is
practically impossible to import setuptools all the time first (for
example, numpy imports distutils, which triggers the warning).

To make at least `import quantumsim` not lead to this warning, the
`__init__.py` for quantumsim is also fixed.

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,4 +6,5 @@ filterwarnings =
     ignore:Not importing directory*:ImportWarning
     ignore:the imp module is deprecated *:DeprecationWarning
     ignore:numpy.ufunc size changed*:RuntimeWarning
+    ignore:Distutils was imported before Setuptools.*:UserWarning
 
