fix rules to always publish pages on push event

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,6 +86,7 @@ pages:
     - if: '$CI_PIPELINE_SOURCE == "schedule"'
       when: never
     - if: '$CI_PIPELINE_SOURCE == "push"'
+      when: always
   environment:
     name: $CI_COMMIT_REF_NAME
     url: https://quantumsim.gitlab.io/quantumsim/$CI_COMMIT_REF_SLUG
