--- a/pytest.ini
+++ b/pytest.ini
@@ -6,5 +6,6 @@ filterwarnings =
     ignore:Not importing directory*:ImportWarning
     ignore:the imp module is deprecated *:DeprecationWarning
     ignore:numpy.ufunc size changed*:RuntimeWarning
-    ignore:Distutils was imported before Setuptools.*:UserWarning
+    ignore:Distutils was imported before setuptools*:UserWarning
+    ignore:lib2to3 package is deprecated and may not be able to parse Python 3.10+:PendingDeprecationWarning
 
